[workspace]
members = ["rainmaker", "examples"]
resolver = "2"

[patch.crates-io]
rainmaker-components = { git = "https://github.com/rainmaker-rs/rainmaker-components", branch = "mqtt_buffer" }

[profile.dev]
opt-level = "z"
debug = true
# lto = true

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
